--- a/swimsite/templates/_footer.html
+++ b/swimsite/templates/_footer.html
@@ -1,6 +1,7 @@
 {% load django_bootstrap5 %}
 <div class="container">
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
-    <a href="{% url 'logout' %}" class="btn btn-outline-primary me-2">Logout</a>
+    <a href="{% url 'home' %}" class="btn btn-primary me-2 mr-3">HOME</a>
+    <a href="{% url 'logout' %}" class="btn btn-outline-primary me-2">ログアウト</a>
   </header>
 </div>
