個人系画面実装完了

--- a/swimsite/templates/login.html
+++ b/swimsite/templates/login.html
@@ -13,12 +13,12 @@ Login
     {% csrf_token %}
     <img class="mb-4" src="{% static 'img/aqua_dome.jpg' %}" alt="" width="216" height="171">
     {{ form.non_field_errors }}
-    <div class="form-floating mb-3">
+    <div class="mb-3">
       <label>ユーザー名</label>
       <input type="text" class="form-control" id="id_username" name="username" placeholder="Username">
       {{ form.username.errors }}
     </div>
-    <div class="form-floating mb-3">
+    <div class="mb-3">
       <label>パスワード</label>
       <input type="password" class="form-control" id="id_password" name="password" placeholder="Password">
       {{ form.password.errors }}
