--- a/swimsite/templates/home.html
+++ b/swimsite/templates/home.html
@@ -7,9 +7,9 @@ Home
 
 {% block content %}
 <div class="container">
-  <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <a href="{% url 'result_kojin_inv' %}" class="btn btn-primary btn-block mb-3">個人記録</a>
-    <a href="{% url 'result_taikai' %}" class="btn btn-primary btn-block mb-3">大会記録</a>
+  <div class="d-grid gap-2 mx-auto mb-4 border-bottom">
+    <a href="{% url 'result_kojin' %}" class="btn btn-primary mb-3">個人記録</a>
+    <a href="{% url 'result_taikai' %}" class="btn btn-primary mb-3">大会記録</a>
   </div>
 </div>
 {% include '_footer.html' %}
