--- a/swimsite/templates/home.html
+++ b/swimsite/templates/home.html
@@ -13,4 +13,11 @@ Home
   </div>
 </div>
 {% include '_footer.html' %}
+
+<div class="container">
+  <div class="d-grid gap-2 mx-auto mb-4">
+    <a href="https://github.com/kanata3319/swimsite" target="_blank">GitHub</a>
+  </div>
+</div>
+
 {% endblock content %}
